--- a/index.html
+++ b/index.html
@@ -1309,6 +1309,7 @@
                 "Service": service,
                 "Message": message
             });
+            console.log(raw)
 
             var requestOptions = {
                 method: 'POST',
