--- a/index.html
+++ b/index.html
@@ -1314,7 +1314,7 @@
             var requestOptions = {
                 method: 'POST',
                 headers: myHeaders,
-                body: raw,
+                body: JSON.stringify(raw),
                 redirect: 'follow'
             };
 
