--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <title>Motox - Car Repair Services HTML5 Template</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/logo/favicon.png">
+    <title>Serv At Home Auto Repair</title>
+    <link rel="icon" type="image/x-icon" href="https://i.imgur.com/mGKyHzq.png">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/all-fontawesome.min.css">
     <link rel="stylesheet" href="assets/css/flaticon.css">
