--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <title>Serv At Home Auto Repair</title>
+    <title>Serv @ Home Auto Repair</title>
     <link rel="icon" type="image/x-icon" href="https://i.imgur.com/mGKyHzq.png">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/all-fontawesome.min.css">
@@ -71,72 +71,6 @@
             <div class="hero-slider owl-carousel owl-theme owl-loaded owl-drag">
                 <div class="owl-stage-outer">
                     <div class="owl-stage" style="transform: translate3d(-5980px, 0px, 0px); transition: all 0.25s ease 0s; width: 11960px;">
-                        <div class="owl-item cloned" style="width: 1496px; margin-right: -1px;">
-                            <div class="hero-single" style="background-image: url(assets/img/slider/slider-2.jpg)">
-                                <div class="container">
-                                    <div class="row align-items-center">
-                                        <div class="col-md-7 col-lg-7">
-                                            <div class="hero-content">
-                                                <h6 class="hero-sub-title wow animate__ animate__fadeInUp" data-wow-duration="1s" data-wow-delay=".25s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.25s; animation-name: none;">Welcome To Serv Home Auto Repair
-                                                </h6>
-                                                <h1 class="hero-title wow animate__ animate__fadeInUp" data-wow-duration="1s" data-wow-delay=".50s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.5s; animation-name: none;">
-                                                    We Provide Best Quality Car Repair Servicing
-                                                </h1>
-                                                <p class="wow animate__ animate__fadeInUp" data-wow-duration="1s" data-wow-delay=".75s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.75s; animation-name: none;">All at the comfort and convenience of your home.</p>
-                                                <div class="hero-btn wow animate__ animate__fadeInUp" data-wow-duration="1s" data-wow-delay="1s" style="visibility: hidden; animation-duration: 1s; animation-delay: 1s; animation-name: none;">
-                                                    <a href="contact.html" class="theme-btn">Contact Us<i class="far fa-arrow-right"></i></a>
-                                                    <a href="about.html" class="theme-border-btn">About Us<i class="far fa-arrow-right"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="owl-item cloned" style="width: 1496px; margin-right: -1px;">
-                            <div class="hero-single" style="background-image: url(assets/img/slider/slider-2.jpg)">
-                                <div class="container">
-                                    <div class="row align-items-center">
-                                        <div class="col-md-7 col-lg-7">
-                                            <div class="hero-content">
-                                                <h6 class="hero-sub-title wow animate__ animate__fadeInUp" data-wow-duration="1s" data-wow-delay=".25s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.25s; animation-name: none;">Welcome To Serv Home Auto Repair
-                                                </h6>
-                                                <h1 class="hero-title wow animate__ animate__fadeInUp" data-wow-duration="1s" data-wow-delay=".50s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.5s; animation-name: none;">
-                                                    We Provide Best Quality Car Repair Servicing
-                                                </h1>
-                                                <p class="wow animate__ animate__fadeInUp" data-wow-duration="1s" data-wow-delay=".75s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.75s; animation-name: none;">All at the comfort and convenience of your home.</p>
-                                                <div class="hero-btn wow animate__ animate__fadeInUp" data-wow-duration="1s" data-wow-delay="1s" style="visibility: hidden; animation-duration: 1s; animation-delay: 1s; animation-name: none;">
-                                                    <a href="contact.html" class="theme-btn">Contact Us<i class="far fa-arrow-right"></i></a>
-                                                    <a href="about.html" class="theme-border-btn">About Us<i class="far fa-arrow-right"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="owl-item cloned" style="width: 1496px; margin-right: -1px;">
-                            <div class="hero-single" style="background-image: url(assets/img/slider/slider-2.jpg)">
-                                <div class="container">
-                                    <div class="row align-items-center">
-                                        <div class="col-md-7 col-lg-7">
-                                            <div class="hero-content">
-                                                <h6 class="hero-sub-title wow animate__ animate__fadeInUp" data-wow-duration="1s" data-wow-delay=".25s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.25s; animation-name: none;">Welcome To Serv Home Auto Repair
-                                                </h6>
-                                                <h1 class="hero-title wow animate__ animate__fadeInUp" data-wow-duration="1s" data-wow-delay=".50s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.5s; animation-name: none;">
-                                                    We Provide Best Quality Car Repair Servicing
-                                                </h1>
-                                                <p class="wow animate__ animate__fadeInUp" data-wow-duration="1s" data-wow-delay=".75s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.75s; animation-name: none;">All at the comfort and convenience of your home.</p>
-                                                <div class="hero-btn wow animate__ animate__fadeInUp" data-wow-duration="1s" data-wow-delay="1s" style="visibility: hidden; animation-duration: 1s; animation-delay: 1s; animation-name: none;">
-                                                    <a href="contact.html" class="theme-btn">Contact Us<i class="far fa-arrow-right"></i></a>
-                                                    <a href="about.html" class="theme-border-btn">About Us<i class="far fa-arrow-right"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                         <div class="owl-item cloned" style="width: 1496px; margin-right: -1px;">
                             <div class="hero-single" style="background-image: url(assets/img/slider/slider-2.jpg)">
                                 <div class="container">
